testing metrics of logistic model

--- a/detection.ipynb
+++ b/detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 41,
    "id": "f77aebba",
    "metadata": {},
    "outputs": [],
@@ -10,88 +10,83 @@
     "###https://data.mendeley.com/datasets/z8s6w86tr3/2\n",
     "\n",
     "import pandas as pd\n",
-    "import nltk\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import MultiLabelBinarizer\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "import string\n",
-    "data = pd.read_csv('Suicidality_Reddit_CSSRS.csv')"
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import (\n",
+    "    accuracy_score,\n",
+    "    precision_score,\n",
+    "    recall_score,\n",
+    "    f1_score,\n",
+    "    roc_auc_score,\n",
+    "    confusion_matrix,\n",
+    "    average_precision_score,\n",
+    ")\n",
+    "df = pd.read_csv('../data/Suicide_Detection.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5f7f41f3",
+   "execution_count": 42,
+   "id": "4bc68a81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "posts = df['text']\n",
+    "labels = df['class'].apply(lambda x: 1 if x == 'suicide' else 0)\n",
+    "\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "X = vectorizer.fit_transform(posts)\n",
+    "y = labels\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0)\n",
+    "model = LogisticRegression().fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "y_pred_proba = model.predict_proba(X_test)[:, 1]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "ea94941f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\"'its\", 'viable', 'option', 'youll', 'leaving', 'wife', 'behind', 'youd', 'pain', 'beyond', 'comprehension.it', 'sucks', 'worrying', 'money', 'i', 'know', 'first', 'hand', 'it', 'definitely', 'feel', 'hopeless', 'seem', 'tired', 'aware', 'your', 'wife', 'might', 'need', 'chip', 'financially', 'i', 'know', 'time', 'issue', 'even', '10-15', 'hours', 'asthenia', 'could', 'alleviate', 'lot', 'pressure', 'in', 'meantime', 'get', 'shit', 'together', 'write', 'resume', 'tomorrow', 'no', 'excuses', 'get', 'done', 'send', 'whether', 'believe', 'sort', 'powerful', 'force', 'governing', 'things', 'things', 'really', 'work', 'this', 'big', 'test', 'youll', 'pull', 'just', 'try', 'stay', 'positive', 'everything', 'work']\n"
+      "Accuracy: 0.9350\n",
+      "Precision: 0.9447\n",
+      "Recall (Sensitivity/True Positive Rate): 0.9241\n",
+      "F1-Score: 0.9343\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[27457  1569]\n",
+      " [ 2201 26792]]\n"
      ]
     }
    ],
    "source": [
-    "df = data.copy()\n",
-    "stop_words = nltk.corpus.stopwords.words('english')\n",
-    "def remove_stops(doc):\n",
-    "    words = []\n",
-    "    doc = nltk.word_tokenize(doc)\n",
-    "    for token in doc:\n",
-    "        # if token not in stop_words and token not in string.punctuation:\n",
-    "        if token not in stop_words and token not in string.punctuation:\n",
-    "            words.append(token.lower())\n",
-    "    return words\n",
-    "# post = df['Post'].apply(remove_stops)\n",
-    "post = df['Post']\n",
-    "label = df['Label'].apply(lambda x: str(x))\n",
-    "print(post[0])\n"
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "precision = precision_score(y_test, y_pred)\n",
+    "recall = recall_score(y_test, y_pred)\n",
+    "f1 = f1_score(y_test, y_pred)\n",
+    "# roc_auc = roc_auc_score(y_test, y_pred_proba)\n",
+    "# avg_precision = average_precision_score(y_test, y_pred_proba)\n",
+    "conf_matrix = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "print(f\"Accuracy: {accuracy:.4f}\")\n",
+    "print(f\"Precision: {precision:.4f}\")\n",
+    "print(f\"Recall (Sensitivity/True Positive Rate): {recall:.4f}\")\n",
+    "print(f\"F1-Score: {f1:.4f}\")\n",
+    "# print(f\"ROC AUC Score: {roc_auc:.4f}\")\n",
+    "# print(f\"Average Precision Score (PR AUC): {avg_precision:.4f}\")\n",
+    "print(\"\\nConfusion Matrix:\")\n",
+    "print(conf_matrix)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 144,
-   "id": "4bc68a81",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "X has 10438 features, but SVC is expecting 19478 features as input.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[144]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      5\u001b[39m X_test_vectorized = MultiLabelBinarizer().fit_transform(X_test)\n\u001b[32m      6\u001b[39m m = SVC(kernel=\u001b[33m'\u001b[39m\u001b[33mlinear\u001b[39m\u001b[33m'\u001b[39m).fit(X_train_vectorized, y_train)\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m y_pred = \u001b[43mm\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_test_vectorized\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      8\u001b[39m accuracy_score(y_test,y_pred)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Projects/Suicide_Detection/.venv/lib/python3.14/site-packages/sklearn/svm/_base.py:822\u001b[39m, in \u001b[36mBaseSVC.predict\u001b[39m\u001b[34m(self, X)\u001b[39m\n\u001b[32m    820\u001b[39m     y = np.argmax(\u001b[38;5;28mself\u001b[39m.decision_function(X), axis=\u001b[32m1\u001b[39m)\n\u001b[32m    821\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m822\u001b[39m     y = \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    823\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m.classes_.take(np.asarray(y, dtype=np.intp))\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Projects/Suicide_Detection/.venv/lib/python3.14/site-packages/sklearn/svm/_base.py:436\u001b[39m, in \u001b[36mBaseLibSVM.predict\u001b[39m\u001b[34m(self, X)\u001b[39m\n\u001b[32m    420\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mpredict\u001b[39m(\u001b[38;5;28mself\u001b[39m, X):\n\u001b[32m    421\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Perform regression on samples in X.\u001b[39;00m\n\u001b[32m    422\u001b[39m \n\u001b[32m    423\u001b[39m \u001b[33;03m    For an one-class model, +1 (inlier) or -1 (outlier) is returned.\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    434\u001b[39m \u001b[33;03m        The predicted values.\u001b[39;00m\n\u001b[32m    435\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m436\u001b[39m     X = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_validate_for_predict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    437\u001b[39m     predict = \u001b[38;5;28mself\u001b[39m._sparse_predict \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m._sparse \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28mself\u001b[39m._dense_predict\n\u001b[32m    438\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m predict(X)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Projects/Suicide_Detection/.venv/lib/python3.14/site-packages/sklearn/svm/_base.py:614\u001b[39m, in \u001b[36mBaseLibSVM._validate_for_predict\u001b[39m\u001b[34m(self, X)\u001b[39m\n\u001b[32m    611\u001b[39m check_is_fitted(\u001b[38;5;28mself\u001b[39m)\n\u001b[32m    613\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mcallable\u001b[39m(\u001b[38;5;28mself\u001b[39m.kernel):\n\u001b[32m--> \u001b[39m\u001b[32m614\u001b[39m     X = \u001b[43mvalidate_data\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    615\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m    616\u001b[39m \u001b[43m        \u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    617\u001b[39m \u001b[43m        \u001b[49m\u001b[43maccept_sparse\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcsr\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m    618\u001b[39m \u001b[43m        \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m=\u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfloat64\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    619\u001b[39m \u001b[43m        \u001b[49m\u001b[43morder\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mC\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m    620\u001b[39m \u001b[43m        \u001b[49m\u001b[43maccept_large_sparse\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m    621\u001b[39m \u001b[43m        \u001b[49m\u001b[43mreset\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m    622\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    624\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m._sparse \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m sp.issparse(X):\n\u001b[32m    625\u001b[39m     X = sp.csr_matrix(X)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Projects/Suicide_Detection/.venv/lib/python3.14/site-packages/sklearn/utils/validation.py:2975\u001b[39m, in \u001b[36mvalidate_data\u001b[39m\u001b[34m(_estimator, X, y, reset, validate_separately, skip_check_array, **check_params)\u001b[39m\n\u001b[32m   2972\u001b[39m     out = X, y\n\u001b[32m   2974\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m no_val_X \u001b[38;5;129;01mand\u001b[39;00m check_params.get(\u001b[33m\"\u001b[39m\u001b[33mensure_2d\u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[32m-> \u001b[39m\u001b[32m2975\u001b[39m     \u001b[43m_check_n_features\u001b[49m\u001b[43m(\u001b[49m\u001b[43m_estimator\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreset\u001b[49m\u001b[43m=\u001b[49m\u001b[43mreset\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   2977\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m out\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Projects/Suicide_Detection/.venv/lib/python3.14/site-packages/sklearn/utils/validation.py:2839\u001b[39m, in \u001b[36m_check_n_features\u001b[39m\u001b[34m(estimator, X, reset)\u001b[39m\n\u001b[32m   2836\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[32m   2838\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m n_features != estimator.n_features_in_:\n\u001b[32m-> \u001b[39m\u001b[32m2839\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m   2840\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mX has \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn_features\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m features, but \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mestimator.\u001b[34m__class__\u001b[39m.\u001b[34m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   2841\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mis expecting \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mestimator.n_features_in_\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m features as input.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   2842\u001b[39m     )\n",
-      "\u001b[31mValueError\u001b[39m: X has 10438 features, but SVC is expecting 19478 features as input."
-     ]
-    }
-   ],
-   "source": [
-    "posts = post\n",
-    "labels = label\n",
-    "X_train, X_test, y_train, y_test = train_test_split(posts, labels, random_state=0)\n",
-    "X_train_vectorized = MultiLabelBinarizer().fit_transform(X_train)\n",
-    "X_test_vectorized = MultiLabelBinarizer().fit_transform(X_test)\n",
-    "m = SVC(kernel='linear').fit(X_train_vectorized, y_train)\n",
-    "y_pred = m.predict(X_test_vectorized)\n",
-    "accuracy_score(y_test,y_pred)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea94941f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
