--- a/detection.ipynb
+++ b/detection.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 28,
    "id": "f77aebba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "###https://data.mendeley.com/datasets/z8s6w86tr3/2\n",
+    "###https://www.opendatabay.com/data/healthcare/9182606a-0bc1-4cb5-8700-73bf7f9fd525\n",
     "\n",
     "import pandas as pd\n",
     "from sklearn.svm import SVC\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "id": "4bc68a81",
    "metadata": {},
    "outputs": [],
@@ -50,22 +50,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "ea94941f",
+   "execution_count": 30,
+   "id": "879b49ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshold = 0.2\n",
+    "y_pred = (y_pred_proba >= threshold)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b8919008",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9350\n",
-      "Precision: 0.9447\n",
-      "Recall (Sensitivity/True Positive Rate): 0.9241\n",
-      "F1-Score: 0.9343\n",
+      "Accuracy: 0.9127\n",
+      "Precision: 0.8657\n",
+      "Recall (Sensitivity/True Positive Rate): 0.9768\n",
+      "F1-Score: 0.9179\n",
+      "ROC AUC Score: 0.9818\n",
+      "Average Precision Score (PR AUC): 0.9809\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[27457  1569]\n",
-      " [ 2201 26792]]\n"
+      "[[24633  4393]\n",
+      " [  674 28319]]\n"
      ]
     }
    ],
@@ -74,18 +87,55 @@
     "precision = precision_score(y_test, y_pred)\n",
     "recall = recall_score(y_test, y_pred)\n",
     "f1 = f1_score(y_test, y_pred)\n",
-    "# roc_auc = roc_auc_score(y_test, y_pred_proba)\n",
-    "# avg_precision = average_precision_score(y_test, y_pred_proba)\n",
+    "roc_auc = roc_auc_score(y_test, y_pred_proba)\n",
+    "avg_precision = average_precision_score(y_test, y_pred_proba)\n",
     "conf_matrix = confusion_matrix(y_test, y_pred)\n",
     "\n",
     "print(f\"Accuracy: {accuracy:.4f}\")\n",
     "print(f\"Precision: {precision:.4f}\")\n",
     "print(f\"Recall (Sensitivity/True Positive Rate): {recall:.4f}\")\n",
     "print(f\"F1-Score: {f1:.4f}\")\n",
-    "# print(f\"ROC AUC Score: {roc_auc:.4f}\")\n",
-    "# print(f\"Average Precision Score (PR AUC): {avg_precision:.4f}\")\n",
+    "print(f\"ROC AUC Score: {roc_auc:.4f}\")\n",
+    "print(f\"Average Precision Score (PR AUC): {avg_precision:.4f}\")\n",
     "print(\"\\nConfusion Matrix:\")\n",
     "print(conf_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea94941f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "with threshold:  [[False  True]]\n",
+      "with threshold:  [[0.00865396 0.99134604]]\n",
+      "with threshold:  [1]\n",
+      "without threshold:  [1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "vectorized = vectorizer.transform([\"\"\"\"\"\"])\n",
+    "predict_probas = model.predict_proba(vectorized)\n",
+    "bools = (predict_probas >= threshold)\n",
+    "print('with threshold: ',bools)\n",
+    "print('with threshold: ',predict_probas)\n",
+    "if all(bools[0]):\n",
+    "    if predict_probas[0][0] > predict_probas[0][1]:\n",
+    "        print('with threshold: ', [0])\n",
+    "    else: print('with threshold: ',[1])\n",
+    "elif all(bool == False for bool in bools[0]):\n",
+    "    print('Both False')\n",
+    "elif any(bools[0]):\n",
+    "    if predict_probas[0][0] > predict_probas[0][1]:\n",
+    "        print('with threshold: ', [0])\n",
+    "    else: print('with threshold: ',[1])\n",
+    "print('without threshold: ',model.predict(vectorized))\n"
    ]
   },
   {
