working with crawlbase to scrape reddit

--- a/detection.ipynb
+++ b/detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "f77aebba",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "4bc68a81",
    "metadata": {},
    "outputs": [],
@@ -50,18 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "879b49ee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "threshold = 0.2\n",
-    "y_pred = (y_pred_proba >= threshold)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "b8919008",
    "metadata": {},
    "outputs": [
@@ -73,8 +62,8 @@
       "Precision: 0.8657\n",
       "Recall (Sensitivity/True Positive Rate): 0.9768\n",
       "F1-Score: 0.9179\n",
-      "ROC AUC Score: 0.9818\n",
-      "Average Precision Score (PR AUC): 0.9809\n",
+      "ROC AUC Score: 0.9127\n",
+      "Average Precision Score (PR AUC): 0.8572\n",
       "\n",
       "Confusion Matrix:\n",
       "[[24633  4393]\n",
@@ -83,12 +72,15 @@
     }
    ],
    "source": [
+    "threshold = 0.2\n",
+    "y_pred = (y_pred_proba >= threshold)\n",
+    "\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "precision = precision_score(y_test, y_pred)\n",
     "recall = recall_score(y_test, y_pred)\n",
     "f1 = f1_score(y_test, y_pred)\n",
-    "roc_auc = roc_auc_score(y_test, y_pred_proba)\n",
-    "avg_precision = average_precision_score(y_test, y_pred_proba)\n",
+    "roc_auc = roc_auc_score(y_test, y_pred)\n",
+    "avg_precision = average_precision_score(y_test, y_pred)\n",
     "conf_matrix = confusion_matrix(y_test, y_pred)\n",
     "\n",
     "print(f\"Accuracy: {accuracy:.4f}\")\n",
@@ -103,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ea94941f",
    "metadata": {},
    "outputs": [
@@ -111,16 +103,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "with threshold:  [[False  True]]\n",
-      "with threshold:  [[0.00865396 0.99134604]]\n",
-      "with threshold:  [1]\n",
-      "without threshold:  [1]\n"
+      "with threshold:  [[ True  True]]\n",
+      "with threshold:  [[0.66096499 0.33903501]]\n",
+      "with threshold:  [0]\n",
+      "without threshold:  [0]\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "vectorized = vectorizer.transform([\"\"\"\"\"\"])\n",
+    "vectorized = vectorizer.transform([\"\"\"I am really sad. help me overcome this sadness\"\"\"])\n",
     "predict_probas = model.predict_proba(vectorized)\n",
     "bools = (predict_probas >= threshold)\n",
     "print('with threshold: ',bools)\n",
@@ -133,7 +125,7 @@
     "    print('Both False')\n",
     "elif any(bools[0]):\n",
     "    if predict_probas[0][0] > predict_probas[0][1]:\n",
-    "        print('with threshold: ', [0])\n",
+    "        print('with threshold: ',[0])\n",
     "    else: print('with threshold: ',[1])\n",
     "print('without threshold: ',model.predict(vectorized))\n"
    ]
@@ -142,6 +134,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "94c68dc4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "063579cd",
    "metadata": {},
    "outputs": [],
    "source": []
