successfully added the ability to save data to csv file

--- a/detection.ipynb
+++ b/detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "f77aebba",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,7 @@
     "###https://www.opendatabay.com/data/healthcare/9182606a-0bc1-4cb5-8700-73bf7f9fd525\n",
     "\n",
     "import pandas as pd\n",
+    "import pickle\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "4bc68a81",
    "metadata": {},
    "outputs": [],
@@ -38,6 +39,7 @@
     "\n",
     "vectorizer = TfidfVectorizer()\n",
     "X = vectorizer.fit_transform(posts)\n",
+    "pickle.dump(vectorizer, open('vectorizer.p', 'wb'))\n",
     "y = labels\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0)\n",
@@ -45,6 +47,7 @@
     "\n",
     "y_pred = model.predict(X_test)\n",
     "y_pred_proba = model.predict_proba(X_test)[:, 1]\n",
+    "pickle.dump(model, open('model.p', 'wb'))\n",
     "\n"
    ]
   },
@@ -95,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "ea94941f",
    "metadata": {},
    "outputs": [
@@ -103,16 +106,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "with threshold:  [[ True  True]]\n",
-      "with threshold:  [[0.66096499 0.33903501]]\n",
-      "with threshold:  [0]\n",
-      "without threshold:  [0]\n"
+      "with threshold:  [[False  True]]\n",
+      "with threshold:  [[0.00325309 0.99674691]]\n",
+      "with threshold:  [1]\n",
+      "without threshold:  [1]\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "vectorized = vectorizer.transform([\"\"\"I am really sad. help me overcome this sadness\"\"\"])\n",
+    "vectorized = vectorizer.transform([\"\"\"I want to die\"\"\"])\n",
     "predict_probas = model.predict_proba(vectorized)\n",
     "bools = (predict_probas >= threshold)\n",
     "print('with threshold: ',bools)\n",
