--- a/reddit_scraper.ipynb
+++ b/reddit_scraper.ipynb
@@ -2,71 +2,84 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 279,
    "id": "ca6941a7",
    "metadata": {},
    "outputs": [],
    "source": [
     "from crawlbase import CrawlingAPI\n",
-    "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "token = 'dLN3qq4_CCZeNJTAPTwGdA'\n",
+    "import pickle\n",
+    "import pandas as pd\n",
+    "import time\n",
     "\n",
-    "reddit_url = 'https://www.reddit.com/r/depression/new/'\n",
+    "def scrape(sub_red):\n",
+    "    token = 'dLN3qq4_CCZeNJTAPTwGdA'\n",
+    "    reddit_url = 'https://www.reddit.com/r/' + sub_red + '/new/'\n",
+    "    api = CrawlingAPI({'token': token})\n",
+    "    response = api.get(reddit_url)\n",
     "\n",
-    "api = CrawlingAPI({'token': token})\n",
-    "\n",
-    "response = api.get(reddit_url)\n",
-    "\n",
-    "if response['status_code'] == 200:\n",
-    "    html_data = response['body']\n",
-    "else:\n",
-    "    print('Error')\n"
+    "    if response['status_code'] == 200:\n",
+    "        return response['body']\n",
+    "    else:\n",
+    "        print('Error')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "b2484b60",
+   "execution_count": 280,
+   "id": "8539c2f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from selenium import webdriver\n",
-    "# from selenium.webdriver.chrome.options import Options\n",
-    "# options = Options()\n",
-    "# options.add_argument('--headless') # Run in headless mode\n",
-    "# options.add_argument('--disable-gpu') # Recommended for headless\n",
-    "# options.add_argument('--no-sandbox') # Needed in some environments\n",
-    "# driver = webdriver.Chrome(options=options)\n",
-    "# reddit_url = 'https://www.reddit.com/r/depression'\n",
-    "# driver.get(reddit_url)\n",
-    "# html_data = driver.page_source\n",
+    "def save_post(html_data):    \n",
+    "    with open('model.p', 'rb') as file:\n",
+    "        model = pickle.load(file)\n",
+    "    with open('vectorizer.p', 'rb') as file:\n",
+    "        vectorizer = pickle.load(file)\n",
+    "    soup = BeautifulSoup(html_data, 'html.parser')\n",
+    "    instances = soup.find_all('div', property=\"schema:articleBody\")\n",
+    "    docs = []\n",
+    "    for instance in instances:\n",
+    "        string = str(instance.find_next())\n",
+    "        docs.append(string.strip('</p>\\n '))\n",
+    "\n",
+    "    verdicts = pd.read_csv('verdicts.csv')\n",
+    "    for doc in docs:\n",
+    "        vectorized = vectorizer.transform([doc])\n",
+    "        predict_probas = model.predict_proba(vectorized)[:, 1]\n",
+    "        threshold = 0.5\n",
+    "        bool = (predict_probas >= threshold)\n",
+    "        row = pd.Series({'post':doc,'verdict':bool})\n",
+    "        if not (verdicts['post'] == doc).any():\n",
+    "            print('saved')\n",
+    "            verdicts = pd.concat([verdicts, pd.DataFrame({'post':doc,'verdict':bool})])\n",
+    "            verdicts.to_csv('verdicts.csv', index=False)\n",
+    "        \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "8539c2f5",
+   "execution_count": 281,
+   "id": "812862b4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Had good job as resident physician, still have it, but got two dui’s in the last 4 months the second one on a suspended license. I was coming back from the bar with my friend. He was driving. He says to me that hes not good to drive and I take over. I got pulled over 500 feet from my driveway. I was supposed to get my license back Dec 17. Now, I face loss of my medical licensure, I am beyond broke from both dui lawyer and medical license lawyer. I have no friends where I live, and where I live is not walkable at all. Every day is misery and I cannot see the light. Someday i’ll be an attending and make lots of money, sure, but who cares. I hate my job, i’m all alone, and this criminal record will taint my reputation forever. I know I am focusing on all of the bad and none of the good. But i rather not live anymore. I don’t want to deal with these problems. I miss my old life, carefree, going skiing every weekend, going out to the bars by myself and trying (unsuccessfully) to talk to women. Granted, i was miserable then. But nothing compared to this. I always wanted to go skiing in british columbia and now that is going to be impossible. I always wanted to be a pilot and now that is impossible. I don’t know how to cope with my new reality. Just because of a couple stupid mistakes. I spend all day wishing I could go back in time and undo my actions and it tortures me every second of every day\n",
-      "Going through a lot of seasonal depression lately. I’ve been depressed and anxious my entire life but it’s worse lately. I live in a rural area and I don’t really like the people I work with, so I have no one to talk to. I feel like every interaction is unfulfilling. Life is so dreary lately and I’m so bored, frustrated, and tired.\n",
-      "Thinking about ending things. Does anyone care? Idk. All I can think about is ending it. No one loves me. I'm only good for what I can provide. Which is nothing. If I don't hear from anyone I'll just delete this like I do all my other posts after I'm ignored. Figured I'd try one more time before I do something I cant turn back from.\n"
+      "saved\n",
+      "saved\n",
+      "saved\n"
      ]
     }
    ],
    "source": [
-    "soup = BeautifulSoup(html_data, 'html.parser')\n",
-    "instances = soup.find_all('div', property=\"schema:articleBody\")\n",
-    "for instance in instances:\n",
-    "    string = str(instance.find_next())\n",
-    "    text = string.strip('</p>\\n ')\n",
-    "    print(text)\n"
+    "sub_reds = ['depression', 'sad', 'horses', 'random']\n",
+    "for sub_red in sub_reds:\n",
+    "    save_post(scrape(sub_red))\n",
+    "    time.sleep(10)"
    ]
   },
   {
@@ -75,7 +88,11 @@
    "id": "f260042a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# verdicts = pd.DataFrame({'post':[], 'verdict':[]})\n",
+    "# verdicts.loc[len(verdicts)] = ['dummy', 'data']\n",
+    "# verdicts.to_csv('verdicts.csv')"
+   ]
   },
   {
    "cell_type": "markdown",
