--- a/reddit_scraper.ipynb
+++ b/reddit_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 36,
    "id": "ca6941a7",
    "metadata": {},
    "outputs": [],
@@ -22,17 +22,18 @@
     "    if response['status_code'] == 200:\n",
     "        return response['body']\n",
     "    else:\n",
-    "        print('Error')\n"
+    "        print('Error')\n",
+    "html_data = scrape('depression')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": null,
    "id": "8539c2f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_post(html_data):    \n",
+    "def save_post(html_data,sub_red):    \n",
     "    with open('model.p', 'rb') as file:\n",
     "        model = pickle.load(file)\n",
     "    with open('vectorizer.p', 'rb') as file:\n",
@@ -50,18 +51,17 @@
     "        predict_probas = model.predict_proba(vectorized)[:, 1]\n",
     "        threshold = 0.5\n",
     "        bool = (predict_probas >= threshold)\n",
-    "        row = pd.Series({'post':doc,'verdict':bool})\n",
     "        if not (verdicts['post'] == doc).any():\n",
-    "            print('saved')\n",
-    "            verdicts = pd.concat([verdicts, pd.DataFrame({'post':doc,'verdict':bool})])\n",
+    "            print('saved a post from')\n",
+    "            verdicts = pd.concat([verdicts, pd.DataFrame({'post':doc,'verdict':bool, 'sub_red':sub_red})])\n",
     "            verdicts.to_csv('verdicts.csv', index=False)\n",
-    "        \n",
+    "save_post(html_data,'depression')\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 44,
    "id": "812862b4",
    "metadata": {},
    "outputs": [
@@ -69,43 +69,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saved\n",
-      "saved\n",
-      "saved\n"
+      "saved a post from\n",
+      "saved a post from\n",
+      "saved a post from\n"
      ]
     }
    ],
    "source": [
-    "sub_reds = ['depression', 'sad', 'horses', 'random']\n",
+    "sub_reds = ['depression', 'sad', 'confessions']\n",
+    "sub_reds = ['depression']\n",
+    "iterations = 0\n",
     "for sub_red in sub_reds:\n",
-    "    save_post(scrape(sub_red))\n",
-    "    time.sleep(10)"
+    "    save_post(scrape(sub_red),sub_red)\n",
+    "    # time.sleep(10)\n",
+    "iterations += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "f260042a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "verdicts = pd.DataFrame({'sub_red': sub_red,'verdict':[], 'post':[]})\n",
+    "verdicts.to_csv('verdicts.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f260042a",
+   "id": "a2e38473",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# verdicts = pd.DataFrame({'post':[], 'verdict':[]})\n",
-    "# verdicts.loc[len(verdicts)] = ['dummy', 'data']\n",
-    "# verdicts.to_csv('verdicts.csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "820837fe",
-   "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "debb824f",
+   "id": "934de1d6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28mbool\u001b[39m:\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     \u001b[38;5;28;01mpass\u001b[39;00m\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "820837fe",
+   "metadata": {},
    "source": []
   }
  ],
