--- a/reddit_scraper.ipynb
+++ b/reddit_scraper.ipynb
@@ -28,10 +28,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "8539c2f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saved a post from\n",
+      "saved a post from\n",
+      "saved a post from\n"
+     ]
+    }
+   ],
    "source": [
     "def save_post(html_data,sub_red):    \n",
     "    with open('model.p', 'rb') as file:\n",
@@ -87,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "id": "f260042a",
    "metadata": {},
    "outputs": [],
