--- a/reddit_scraper.ipynb
+++ b/reddit_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 107,
    "id": "ca6941a7",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 127,
    "id": "8539c2f5",
    "metadata": {},
    "outputs": [
@@ -36,9 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saved a post from\n",
-      "saved a post from\n",
-      "saved a post from\n"
+      "['', 'As someone who’s gone through depression in the past and still faces it partly today, i’ve always found a great way of working through it was just talking. Thought i’d put this out there so if anyone ever wanted to talk privately they could, i’m always here for yall 🫶', '', '', \"I don't know what would help besides killing me blowing my brains out all over the wall but I just want it to stop I can't handle living anymore 27 years was enough I want off stop it please\", '', '', 'I am 27m. I have been battling gambling addiction for a while. I always tell myself i would stop. This time i fucked up bad.', \"I was moneyless cause i gambled away my paycheck. It was going well, i didn't need any money so it was fine. Then, the other day, i got fined while driving. I asked for a cash advance on my paycheck, i wanted a small sum (paycheck is due in less than a week anyway), and my boss gave me almost all of it instead. I gambled it away. Again.\", \"I wanted to use that money to go on vacation, to take a break from my bleak life. Now i can't.\", \"27 years and i squandered away everything. I have a good paying job, i should have a lot of money, instead this year i got wrapped into this and can't find a way out.\", 'I am beyond help.', '']\n"
      ]
     }
    ],
@@ -52,8 +50,11 @@
     "    instances = soup.find_all('div', property=\"schema:articleBody\")\n",
     "    docs = []\n",
     "    for instance in instances:\n",
-    "        string = str(instance.find_next())\n",
-    "        docs.append(string.strip('</p>\\n '))\n",
+    "        for p_tag in instance:\n",
+    "            if p_tag:\n",
+    "            # print(''.join(p_tag.get_text().strip()))\n",
+    "                docs.append(''.join(p_tag.get_text().strip()))\n",
+    "    print(docs)\n",
     "\n",
     "    verdicts = pd.read_csv('verdicts.csv')\n",
     "    for doc in docs:\n",
@@ -61,17 +62,17 @@
     "        predict_probas = model.predict_proba(vectorized)[:, 1]\n",
     "        threshold = 0.5\n",
     "        bool = (predict_probas >= threshold)\n",
-    "        if not (verdicts['post'] == doc).any():\n",
-    "            print('saved a post from')\n",
+    "        if not (verdicts['post'] == doc).any() and doc:\n",
     "            verdicts = pd.concat([verdicts, pd.DataFrame({'post':doc,'verdict':bool, 'sub_red':sub_red})])\n",
     "            verdicts.to_csv('verdicts.csv', index=False)\n",
+    "            print('saved a post from r/' + sub_red + ' ' + str(bool))\n",
     "save_post(html_data,'depression')\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 101,
    "id": "812862b4",
    "metadata": {},
    "outputs": [
@@ -81,13 +82,17 @@
      "text": [
       "saved a post from\n",
       "saved a post from\n",
+      "saved a post from\n",
+      "saved a post from\n",
+      "saved a post from\n",
+      "saved a post from\n",
       "saved a post from\n"
      ]
     }
    ],
    "source": [
     "sub_reds = ['depression', 'sad', 'confessions']\n",
-    "sub_reds = ['depression']\n",
+    "sub_reds = ['sad']\n",
     "iterations = 0\n",
     "for sub_red in sub_reds:\n",
     "    save_post(scrape(sub_red),sub_red)\n",
@@ -97,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 125,
    "id": "f260042a",
    "metadata": {},
    "outputs": [],
