messing around with thresholds

--- a/detection.ipynb
+++ b/detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 1,
    "id": "f77aebba",
    "metadata": {},
    "outputs": [],
@@ -39,211 +39,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ef618803",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>subreddit</th>\n",
-       "      <th>title</th>\n",
-       "      <th>body</th>\n",
-       "      <th>upvotes</th>\n",
-       "      <th>created_utc</th>\n",
-       "      <th>num_comments</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2180687</th>\n",
-       "      <td>9225723</td>\n",
-       "      <td>SuicideWatch</td>\n",
-       "      <td>People don’t care that much when you tell them...</td>\n",
-       "      <td>Whenever I see a story of someone who had a fr...</td>\n",
-       "      <td>134.0</td>\n",
-       "      <td>1.672523e+09</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2180688</th>\n",
-       "      <td>9225730</td>\n",
-       "      <td>SuicideWatch</td>\n",
-       "      <td>i am so tired of being alive</td>\n",
-       "      <td>this has been the worst year of my life by a l...</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.672524e+09</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2180689</th>\n",
-       "      <td>9225733</td>\n",
-       "      <td>SuicideWatch</td>\n",
-       "      <td>My suicide note</td>\n",
-       "      <td>What do you get when you bring an individual i...</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>1.672524e+09</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2180690</th>\n",
-       "      <td>9225734</td>\n",
-       "      <td>SuicideWatch</td>\n",
-       "      <td>I just want to die. I haven't ever had suicida...</td>\n",
-       "      <td>Two months ago I was happy. I wanted to live. ...</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.672525e+09</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2180691</th>\n",
-       "      <td>9225745</td>\n",
-       "      <td>SuicideWatch</td>\n",
-       "      <td>Is finally accepting your suicidal and depress...</td>\n",
-       "      <td>I made a post last time absolutely pouring my ...</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.672526e+09</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2180693</th>\n",
-       "      <td>9225753</td>\n",
-       "      <td>SuicideWatch</td>\n",
-       "      <td>15</td>\n",
-       "      <td>oh god im fucking 15. i hate it. im onw of the...</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>1.672527e+09</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2180696</th>\n",
-       "      <td>9225765</td>\n",
-       "      <td>SuicideWatch</td>\n",
-       "      <td>another year of pain</td>\n",
-       "      <td>What a shit im tired been fighting hourly, im ...</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>1.672528e+09</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2180698</th>\n",
-       "      <td>9225789</td>\n",
-       "      <td>SuicideWatch</td>\n",
-       "      <td>Do y’all think there’s something as being chro...</td>\n",
-       "      <td>As I’m spending New Years with my family I tho...</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>1.672530e+09</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2180699</th>\n",
-       "      <td>9225795</td>\n",
-       "      <td>SuicideWatch</td>\n",
-       "      <td>I almost made it, now I don't know what to do ...</td>\n",
-       "      <td>end of the year is always shit\\nno one knows t...</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.672531e+09</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2180700</th>\n",
-       "      <td>9225801</td>\n",
-       "      <td>SuicideWatch</td>\n",
-       "      <td>I was gonna kill myself.</td>\n",
-       "      <td>This happened like half an hour ago and I just...</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>1.672531e+09</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Unnamed: 0     subreddit  \\\n",
-       "2180687    9225723  SuicideWatch   \n",
-       "2180688    9225730  SuicideWatch   \n",
-       "2180689    9225733  SuicideWatch   \n",
-       "2180690    9225734  SuicideWatch   \n",
-       "2180691    9225745  SuicideWatch   \n",
-       "2180693    9225753  SuicideWatch   \n",
-       "2180696    9225765  SuicideWatch   \n",
-       "2180698    9225789  SuicideWatch   \n",
-       "2180699    9225795  SuicideWatch   \n",
-       "2180700    9225801  SuicideWatch   \n",
-       "\n",
-       "                                                     title  \\\n",
-       "2180687  People don’t care that much when you tell them...   \n",
-       "2180688                       i am so tired of being alive   \n",
-       "2180689                                    My suicide note   \n",
-       "2180690  I just want to die. I haven't ever had suicida...   \n",
-       "2180691  Is finally accepting your suicidal and depress...   \n",
-       "2180693                                                 15   \n",
-       "2180696                               another year of pain   \n",
-       "2180698  Do y’all think there’s something as being chro...   \n",
-       "2180699  I almost made it, now I don't know what to do ...   \n",
-       "2180700                           I was gonna kill myself.   \n",
-       "\n",
-       "                                                      body  upvotes  \\\n",
-       "2180687  Whenever I see a story of someone who had a fr...    134.0   \n",
-       "2180688  this has been the worst year of my life by a l...      8.0   \n",
-       "2180689  What do you get when you bring an individual i...     30.0   \n",
-       "2180690  Two months ago I was happy. I wanted to live. ...      4.0   \n",
-       "2180691  I made a post last time absolutely pouring my ...      5.0   \n",
-       "2180693  oh god im fucking 15. i hate it. im onw of the...     22.0   \n",
-       "2180696  What a shit im tired been fighting hourly, im ...      9.0   \n",
-       "2180698  As I’m spending New Years with my family I tho...     25.0   \n",
-       "2180699  end of the year is always shit\\nno one knows t...      5.0   \n",
-       "2180700  This happened like half an hour ago and I just...     13.0   \n",
-       "\n",
-       "          created_utc  num_comments  label  \n",
-       "2180687  1.672523e+09          23.0    1.0  \n",
-       "2180688  1.672524e+09           1.0    1.0  \n",
-       "2180689  1.672524e+09          14.0    1.0  \n",
-       "2180690  1.672525e+09           2.0    1.0  \n",
-       "2180691  1.672526e+09           3.0    1.0  \n",
-       "2180693  1.672527e+09          24.0    1.0  \n",
-       "2180696  1.672528e+09           1.0    1.0  \n",
-       "2180698  1.672530e+09           6.0    1.0  \n",
-       "2180699  1.672531e+09           7.0    1.0  \n",
-       "2180700  1.672531e+09           2.0    1.0  "
-      ]
-     },
-     "execution_count": 202,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = data.dropna()\n",
     "df = df[df['subreddit'] != 'depression']\n",
@@ -281,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 6,
    "id": "4bc68a81",
    "metadata": {},
    "outputs": [],
@@ -317,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 11,
    "id": "b8919008",
    "metadata": {},
    "outputs": [
@@ -325,22 +124,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9259\n",
-      "Precision: 0.9381\n",
-      "Recall (Sensitivity/True Positive Rate): 0.9106\n",
-      "F1-Score: 0.9241\n",
-      "ROC AUC Score: 0.9258\n",
-      "Average Precision Score (PR AUC): 0.8985\n",
+      "Accuracy: 0.9115\n",
+      "Precision: 0.9630\n",
+      "Recall (Sensitivity/True Positive Rate): 0.8542\n",
+      "F1-Score: 0.9053\n",
+      "ROC AUC Score: 0.9110\n",
+      "Average Precision Score (PR AUC): 0.8948\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[39960  2505]\n",
-      " [ 3729 37964]]\n"
+      "[[41097  1368]\n",
+      " [ 6079 35614]]\n"
      ]
     }
    ],
    "source": [
-    "# threshold = 0.5\n",
-    "# y_pred = (y_pred_proba >= threshold)\n",
+    "threshold = 0.7\n",
+    "y_pred = (y_pred_proba >= threshold)\n",
     "\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "precision = precision_score(y_test, y_pred)\n",
