--- a/reddit_scraper.ipynb
+++ b/reddit_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 210,
    "id": "ca6941a7",
    "metadata": {},
    "outputs": [],
@@ -23,15 +23,27 @@
     "        return response['body']\n",
     "    else:\n",
     "        print('Error')\n",
-    "# html_data = scrape('confessions')"
+    "html_data = scrape('depression')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 230,
    "id": "8539c2f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saved a post from r/confessions [False]\n",
+      "saved a post from r/confessions [False]\n",
+      "saved a post from r/confessions [ True]\n",
+      "saved a post from r/confessions [False]\n",
+      "saved a post from r/confessions [ True]\n"
+     ]
+    }
+   ],
    "source": [
     "def save_post(html_data,sub_red):    \n",
     "    with open('model.p', 'rb') as file:\n",
@@ -50,44 +62,66 @@
     "    for doc in docs:\n",
     "        vectorized = vectorizer.transform([doc])\n",
     "        predict_probas = model.predict_proba(vectorized)[:, 1]\n",
-    "        threshold = 0.5\n",
+    "        threshold = 0.95\n",
     "        bool = (predict_probas >= threshold)\n",
     "        if not (verdicts['post'] == doc).any() and doc:\n",
+    "        # if doc:\n",
     "            verdicts = pd.concat([verdicts, pd.DataFrame({'post':doc,'verdict':bool, 'sub_red':sub_red})])\n",
     "            verdicts.to_csv('verdicts.csv', index=False)\n",
-    "            # print('saved a post from r/' + sub_red + ' ' + str(bool))\n",
-    "# save_post(html_data,'confessions')\n",
+    "            print('saved a post from r/' + sub_red + ' ' + str(bool))\n",
+    "save_post(html_data,'confessions')\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 209,
    "id": "812862b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saved a post from r/depression [False]\n",
+      "saved a post from r/depression [ True]\n",
+      "saved a post from r/depression [ True]\n",
+      "saved a post from r/depression [False]\n",
+      "saved a post from r/depression [ True]\n",
+      "saved a post from r/sad [False]\n",
+      "saved a post from r/sad [ True]\n",
+      "saved a post from r/sad [False]\n",
+      "saved a post from r/sad [ True]\n",
+      "saved a post from r/sad [False]\n",
+      "saved a post from r/sad [False]\n",
+      "saved a post from r/confessions [ True]\n"
+     ]
+    }
+   ],
    "source": [
     "sub_reds = ['depression', 'sad', 'confessions']\n",
     "# sub_reds = ['confessions']\n",
     "iterations = 0\n",
-    "while iterations < 24:\n",
-    "    for sub_red in sub_reds:\n",
-    "        try: \n",
-    "            save_post(scrape(sub_red),sub_red)\n",
-    "        except Exception as e: print(sub_red, e)\n",
-    "        time.sleep(10)\n",
-    "    time.sleep(1800)\n",
-    "    iterations += 1"
+    "# while iterations < 24:\n",
+    "\n",
+    "for sub_red in sub_reds:\n",
+    "    try: \n",
+    "        save_post(scrape(sub_red),sub_red)\n",
+    "    except Exception as e: print(sub_red, e)\n",
+    "    # time.sleep(10)\n",
+    "# time.sleep(1800)\n",
+    "\n",
+    "iterations += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 229,
    "id": "f260042a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "verdicts = pd.DataFrame({'sub_red': sub_red,'verdict':[], 'post':[]})\n",
+    "verdicts = pd.DataFrame({'sub_red': [],'verdict':[], 'post':[]})\n",
     "verdicts.to_csv('verdicts.csv')"
    ]
   },
