--- a/reddit_scraper.ipynb
+++ b/reddit_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 8,
    "id": "ca6941a7",
    "metadata": {},
    "outputs": [],
@@ -28,22 +28,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 10,
    "id": "8539c2f5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "saved a post from r/confessions [False]\n",
-      "saved a post from r/confessions [False]\n",
-      "saved a post from r/confessions [ True]\n",
-      "saved a post from r/confessions [False]\n",
-      "saved a post from r/confessions [ True]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def save_post(html_data,sub_red):    \n",
     "    with open('model.p', 'rb') as file:\n",
@@ -69,13 +57,13 @@
     "            verdicts = pd.concat([verdicts, pd.DataFrame({'post':doc,'verdict':bool, 'sub_red':sub_red})])\n",
     "            verdicts.to_csv('verdicts.csv', index=False)\n",
     "            print('saved a post from r/' + sub_red + ' ' + str(bool))\n",
-    "save_post(html_data,'confessions')\n",
+    "save_post(html_data,'depression')\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 12,
    "id": "812862b4",
    "metadata": {},
    "outputs": [
@@ -85,22 +73,14 @@
      "text": [
       "saved a post from r/depression [False]\n",
       "saved a post from r/depression [ True]\n",
-      "saved a post from r/depression [ True]\n",
       "saved a post from r/depression [False]\n",
-      "saved a post from r/depression [ True]\n",
-      "saved a post from r/sad [False]\n",
-      "saved a post from r/sad [ True]\n",
-      "saved a post from r/sad [False]\n",
-      "saved a post from r/sad [ True]\n",
-      "saved a post from r/sad [False]\n",
-      "saved a post from r/sad [False]\n",
-      "saved a post from r/confessions [ True]\n"
+      "saved a post from r/depression [False]\n"
      ]
     }
    ],
    "source": [
     "sub_reds = ['depression', 'sad', 'confessions']\n",
-    "# sub_reds = ['confessions']\n",
+    "sub_reds = ['depression']\n",
     "iterations = 0\n",
     "# while iterations < 24:\n",
     "\n",
@@ -116,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 11,
    "id": "f260042a",
    "metadata": {},
    "outputs": [],
